fixed header and body gap bug

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 html {
@@ -24,7 +25,7 @@ body .grid {
   min-width: 960px;
   width: 100%;
   grid-template-columns: repeat(12, 1fr);
-  grid-auto-rows: minmax(100px, auto);
+  /* grid-auto-rows: minmax(10px, auto); */
   grid-template-areas:
     'header header header header header header header header header header header header'
     'mHeader mHeader mHeader mHeader mHeader mHeader mHeader mHeader mHeader mHeader mHeader mHeader'
@@ -34,6 +35,8 @@ body .grid {
 /*----------------HEADER--------------*/
 .grid header {
   grid-area: header;
+  height: 14vh;
+  position: relative;
 }
 
 header .top-header {
@@ -41,6 +44,11 @@ header .top-header {
   background-color: #42aa2a;
   grid-area: theader;
   padding: 10px 20%;
+  font-size: 1.6rem;
+}
+
+header .top-header i {
+  margin: 0 10px 0 28px;
 }
 
 header .main-header {
@@ -77,7 +85,7 @@ header .main-header ul li {
 
 header .main-header ul li a {
   color: #959696;
-  font-size: 30px;
+  font-size: 3rem;
 }
 
 /*-------BODY------------*/
@@ -106,11 +114,15 @@ header .main-header ul li a {
 .body .top-body .top-top {
   grid-area: tTop;
   width: 100%;
-  height: 100%;
+  height: 86vh;
   background-image: url('../img/recycle-your-devices.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+
+.body .top-body .top-top p {
+  font-size: 1.6rem;
 }
 
 .body .top-body .btm-top {
@@ -131,7 +143,7 @@ header .main-header ul li a {
   background-color: #1db83c;
 }
 
-body .top-body .btm-top button a {
+.body .top-body .btm-top button a {
   color: #fff;
   padding: 20px;
 }
